Fix jpackage build and update GitHub workflow